fixed table title alignment, fixed line graph and removed the second one, added year

--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,7 @@
       'cmt cht'
       'lmp lmp';
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
   }
   .linearTable {
     grid-area: lmp;
